--- a/src/about-us.html
+++ b/src/about-us.html
@@ -213,7 +213,7 @@
         </div>
       </section>
 
-      <section class="sub-about-us layout-sub-about-us">
+      <section class="sub-about-us layout-sub-about-us decoration">
         <div class="sub-about-us__inner inner">
           <div class="sub-about-us__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
