--- a/src/blog.html
+++ b/src/blog.html
@@ -213,7 +213,7 @@
         </div>
       </section>
 
-      <div class="sub-blog layout-sub-blog">
+      <div class="sub-blog layout-sub-blog decoration">
         <div class="sub-blog__inner inner">
           <div class="sub-blog__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
@@ -589,14 +589,18 @@
                   </div>
                   <ul class="sub-blog__campaign-cards">
                     <li class="sub-blog__campaign-card">
-                      <a href="#" class="campaign-card campaign-card--aside">
-                        <div class="campaign-card__img">
+                      <a href="#" class="campaign-card campaign-card">
+                        <div
+                          class="campaign-card__img campaign-card__img--aside"
+                        >
                           <img
                             src="./assets/images/common/campaign_1.jpg"
                             alt="海の中を色鮮やかなたくさんの魚が泳いでいる様子"
                           />
                         </div>
-                        <div class="campaign-card__item-body">
+                        <div
+                          class="campaign-card__item-body campaign-card__item-body--aside"
+                        >
                           <div class="campaign-card__meta">
                             <p
                               class="campaign-card__category campaign-card__category--center"
@@ -605,12 +609,18 @@
                             </p>
                           </div>
                           <div class="campaign-card__contents">
-                            <p class="campaign-card__title">
+                            <p
+                              class="campaign-card__title campaign-card__title--small"
+                            >
                               全部コミコミ(お一人様)
                             </p>
                             <div class="campaign-card__price-body">
-                              <span class="campaign-card__price">¥56,000</span>
-                              <span class="campaign-card__price-discount"
+                              <span
+                                class="campaign-card__price campaign-card__price--small"
+                                >¥56,000</span
+                              >
+                              <span
+                                class="campaign-card__price-discount campaign-card__price-discount--small"
                                 >¥46,000</span
                               >
                             </div>
@@ -620,14 +630,18 @@
                     </li>
 
                     <li class="sub-blog__campaign-card">
-                      <a href="#" class="campaign-card campaign-card--aside">
-                        <div class="campaign-card__img">
+                      <a href="#" class="campaign-card campaign-card">
+                        <div
+                          class="campaign-card__img campaign-card__img--aside"
+                        >
                           <img
                             src="./assets/images/common/campaign_2.jpg"
                             alt="海の中を色鮮やかなたくさんの魚が泳いでいる様子"
                           />
                         </div>
-                        <div class="campaign-card__item-body">
+                        <div
+                          class="campaign-card__item-body campaign-card__item-body--aside"
+                        >
                           <div class="campaign-card__meta">
                             <p
                               class="campaign-card__category campaign-card__category--center"
@@ -636,12 +650,18 @@
                             </p>
                           </div>
                           <div class="campaign-card__contents">
-                            <p class="campaign-card__title">
+                            <p
+                              class="campaign-card__title campaign-card__title--small"
+                            >
                               全部コミコミ(お一人様)
                             </p>
                             <div class="campaign-card__price-body">
-                              <span class="campaign-card__price">¥24,000</span>
-                              <span class="campaign-card__price-discount"
+                              <span
+                                class="campaign-card__price campaign-card__price--small"
+                                >¥24,000</span
+                              >
+                              <span
+                                class="campaign-card__price-discount campaign-card__price-discount--small"
                                 >¥18,000</span
                               >
                             </div>
@@ -736,7 +756,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--subBlog">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
