--- a/src/campaign.html
+++ b/src/campaign.html
@@ -213,7 +213,7 @@
         </div>
       </section>
 
-      <div class="sub-campaign layout-sub-campaign">
+      <div class="sub-campaign layout-sub-campaign decoration">
         <div class="sub-campaign__inner inner">
           <div class="sub-campaign__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
